Fixed Menu details and wrapping

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -1,4 +1,9 @@
-
+.card_container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
 .container {
     margin: 50px;
@@ -19,10 +24,11 @@
 }
 
 .card_img {
-    width: 225px;
+    width: 100%;
     height: 100%;
     border-radius: 10px 10px 0px 0px;
     border: none;
+    object-fit: cover;
 }
 
 .card_title {
